<?xml version="1.0"?>
<package format="2">
  <name>dbw_mkz_can</name>
  <version>1.5.0</version>
  <description>
    Drive-by-wire interface for the Dataspeed Inc. Lincoln MKZ / Ford Fusion DBW kit for CARMA
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="goodarzm@vt.edu">Goodarz Mehr</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>can_msgs</depend>
  <depend>dbw_mkz_msgs</depend>
  <depend>automotive_platform_msgs</depend>
  <depend>j2735_msgs</depend>
  <depend>cav_msgs</depend>

  <build_depend>dataspeed_can_msg_filters</build_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>socketcan_bridge</exec_depend>
  <exec_depend>dataspeed_can_usb</exec_depend>
  <exec_depend>dbw_mkz_description</exec_depend>
  <exec_depend>dataspeed_ulc_can</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
